# db/migrate/20210809112820_change_message_type_column_name_to_content_type.rb
@@ -1,0 +1,9 @@
+class ChangeMessageTypeColumnNameToContentType < ActiveRecord::Migration[6.1]
+  def up
+    rename_column :messages, :type, :content_type
+  end
+
+  def down
+    rename_column :messages, :content_type, :type
+  end
+end
